Bug 15963 - Fix winbind cache consistency
Summary: Fix winbind cache consistency
Status: RESOLVED FIXED
Alias: None
Product: Samba 4.1 and newer
Classification: Unclassified
Component: Winbind (show other bugs)
Version: unspecified
Hardware: All All
: P5 normal (vote)
Target Milestone: ---
Assignee: Jule Anger
QA Contact: Samba QA Contact
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-12-08 08:08 UTC by Andreas Schneider
Modified: 2026-01-15 07:02 UTC (History)
3 users (show)

See Also:


Attachments
patch for 4.23 and 4.22 (16.05 KB, patch)
2025-12-08 10:37 UTC, Andreas Schneider
pfilipensky: review+
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Andreas Schneider 2025-12-08 08:08:15 UTC
Winbind currently is not very consistently using winbindd_cache.tdb

* with a fresh cache (w/o offline logon enabled) we never store the
  WINBINDD_CACHE_VERSION (currently: 2) which makes any future references to
  cache upgrades difficult
* with a new cache we also fail to store NDR/ entries for as long as when a
  SEQNUM entry gets created, we should probably start with a dummy entry to get
  the NDR caching working from the start
Comment 1 Samba QA Contact 2025-12-08 10:00:04 UTC
This bug was referenced in samba master:

073a9482f0ace8847781181a552e0d0ceb897d0c
c4606bc40632869ff4f1036cf6899df400d15a53
ffe1883d7d68dd933b6fa41e3af722e8688ff882
6667f25507687c19f3d3eaa3301a7ccd2433d4e3
7136a6ba39ddf025e85c639f3e53f53f8ff46cb5
d6ee9b04f2c9875953fba60a26a764ef61670114
Comment 2 Andreas Schneider 2025-12-08 10:37:55 UTC
Created attachment 18786 [details]
patch for 4.23 and 4.22
Comment 3 Pavel Filipenský 2025-12-08 17:30:32 UTC
Comment on attachment 18786 [details]
patch for 4.23 and 4.22

Patch verified for 4.22 and 4.23.

Jule please apply the patch to 4.22 and to 4.23
Comment 4 Jule Anger 2025-12-11 12:31:11 UTC
Pushed to autobuild-v4-{23,22}-test.
Comment 5 Samba QA Contact 2025-12-11 17:01:20 UTC
This bug was referenced in samba v4-23-test:

603a8d2936e6a07547cdad4ee72c526fb975d281
971a37fa4c61cc5a163695f3d725d7203a8558f1
3c9b3169ebcc93ed840d827467c39bc0a26b7b1c
4a31a42c102ee3f184401b98e70fbe8fee602d8a
57a6d19deea651aad5c37f206659ef2ae1ac0391
f09e6d242333acbd8b89c4a645a6bca712651843
Comment 6 Samba QA Contact 2025-12-12 13:57:38 UTC
This bug was referenced in samba v4-23-stable (Release samba-4.23.4):

603a8d2936e6a07547cdad4ee72c526fb975d281
971a37fa4c61cc5a163695f3d725d7203a8558f1
3c9b3169ebcc93ed840d827467c39bc0a26b7b1c
4a31a42c102ee3f184401b98e70fbe8fee602d8a
57a6d19deea651aad5c37f206659ef2ae1ac0391
f09e6d242333acbd8b89c4a645a6bca712651843
Comment 7 Samba QA Contact 2025-12-18 10:00:21 UTC
This bug was referenced in samba v4-22-test:

b3810646ab652f266d2d8acf5bd82ed5cb685676
92d7ff790c6cfce630542e1924548242e0d1a461
8218ed45e2993f9b7442cc25e1bd265191e4f355
b0378cf32baa77e95f0025eb19bb89bf250b19b9
68013eed257c4a8a64190d3fb54a5bd7b80510c5
573a31bc3424171111e6b9b27c1cb02b82543167
Comment 8 Samba QA Contact 2025-12-18 16:14:06 UTC
This bug was referenced in samba v4-22-stable (Release samba-4.22.7):

b3810646ab652f266d2d8acf5bd82ed5cb685676
92d7ff790c6cfce630542e1924548242e0d1a461
8218ed45e2993f9b7442cc25e1bd265191e4f355
b0378cf32baa77e95f0025eb19bb89bf250b19b9
68013eed257c4a8a64190d3fb54a5bd7b80510c5
573a31bc3424171111e6b9b27c1cb02b82543167
Comment 9 Jule Anger 2025-12-18 16:19:09 UTC
Closing out bug report.

Thanks!