s3-winbindd: Fix winbind NDR caching.

All of winbindd's core caching relies on NDR entries. Those entries can
not be stored in winbindd_cache.tdb via wcache_store_ndr() as long as
there is no SEQNUM entry present in the cache.

Guenther

BUG: https://bugzilla.samba.org/show_bug.cgi?id=15963

Signed-off-by: Guenther Deschner <gd@samba.org>
Reviewed-by: Andreas Schneider <asn@samba.org>
(cherry picked from commit c4606bc40632869ff4f1036cf6899df400d15a53)